# OpenMPLab12

./: README.md
DataPreprocessor/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
MultiplicationCompute/: CMakeLists.txt  lab12MC  main.cpp  utils.cpp  utils.h
data/: A.txt  B.txt  compute.sh  lab12DP  lab12MC
